# quiz

./: .coveragerc  .flake8  .gitignore  README.md  docker-compose.local.yml  pyproject.toml
docker/local/django/: Dockerfile  entrypoint.sh
questions/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
questions/migrations/: 0001_initial.py  0002_alter_answer_question.py  0003_alter_answer_question.py  0004_alter_answer_question.py
questions/templates/questions/: user_result.html  useranswer_form.html
questions/tests/: conftest.py  factories.py  test_forms.py  test_models.py  test_views.py
quiz/: settings.py  urls.py
quiz/templates/: base.html
quiz/templates/partials/: _head.html  _messages.html  _scripts.html
users/migrations/: 0001_initial.py
users/tests/: factories.py
