[tool.poetry]
name = "quiz"
version = "0.1.0"
description = "Quiz application for the technical test for a developer position at Leantech"
authors = ["William Fernandes Dias <william.winchester1967@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
django-environ = "^0.11.2"
psycopg = { extras = ["binary"], version = "^3.1.17" }
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^23.12.1"
django-stubs = "^4.2.7"
isort = "^5.13.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-django = "^4.7.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
factory-boy = "^3.3.0"
faker = "^22.2.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "quiz.settings"
addopts = "--cov=quiz --cov=questions"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
